8247246: Add explicit ResolvedJavaType.link and expose presence of default methods

Reviewed-by: kvn